--- a/src/app/pages/role/role.component.html
+++ b/src/app/pages/role/role.component.html
@@ -1,4 +1,64 @@
 <div class="content-wrapper">
-  <section class="content">
+  <!-- Content Header (Page header) -->
+  <section class="content-header">
+      <h1>{{title}}</h1>
+      <ol class="breadcrumb">
+        <li><a routerLink="/"><i class="fa fa-dashboard"></i>Home</a></li>
+        <li class="active">{{title}}</li>
+      </ol>
   </section>
+
+  <!-- Main content -->
+  <section class="content">
+    <app-grid #gridComponent
+      [columns]="gridColumns"
+      [menus]="gridActions"
+      [showIndex]="true" 
+      [indexTitle]="'Index'" 
+      [pageSize]=10 
+      [pageSizes]="[10,20,50,100]" 
+      [resetUrl]="resetUrl" 
+      [sortBy]="'role_name'" 
+      [orderBy]="'asc'"
+      [FTSearch]="{'show': true, 'placeholder': 'Role Name', 'forNames': ['role_name']}"
+      [selection]="{'show': true, 'multiple': true}"
+    >   
+    </app-grid>   
+  </section>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">{{role.created_by!='' ? 'Edit Role' : 'New Role'}}</h4>
+        </div>
+        <div class="modal-body">
+          <form #form="ngForm">
+              <div class="row">
+                <div class="col-md-3"><label class="control-label">Role Name:</label></div>
+                <div class="col-md-9">                    
+                    <input type="text" class="form-control" name="role.role_name" required [(ngModel)]="role.role_name">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-3"><label class="control-label">Description:</label></div>
+                <div class="col-md-9">                    
+                    <textarea class="form-control" name="role.description" required [(ngModel)]="role.description"></textarea>
+                </div>
+              </div> 
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="closeButton" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" id="saveButton" data-loading-text="Saving..." [disabled]="!form.valid" class="btn btn-primary" (click)="save()" autocomplete="off">
+              Save & Close
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- /.content -->
 </div>
