--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,4 +1,32 @@
 <div class="content-wrapper">
-  <section class="content">
+  <!-- Content Header (Page header) -->
+  <section class="content-header">
+      <h1>{{title}}</h1>
+      <ol class="breadcrumb">
+        <li><a routerLink="/"><i class="fa fa-dashboard"></i>Home</a></li>
+        <li class="active">{{title}}</li>
+      </ol>
   </section>
+
+  <!-- Main content -->
+  <section class="content">
+    <app-grid #gridComponent
+      [columns]="gridColumns"
+      [menus]="gridActions"
+      [showIndex]="true" 
+      [indexTitle]="'Index'" 
+      [pageSize]=10 
+      [pageSizes]="[10,20,50,100]" 
+      [resetUrl]="resetUrl" 
+      [sortBy]="'user_name'" 
+      [orderBy]="'asc'"
+      [FTSearch]="{'show': true, 'placeholder': 'User Name', 'forNames': ['user_name']}"
+      [selection]="{'show': false, 'multiple': true}"
+    >   
+    </app-grid>   
+  </section>
+
+
+
+  <!-- /.content -->
 </div>
